--- a/nginx.conf
+++ b/nginx.conf
@@ -1,10 +1,85 @@
+# nginx.conf - Template for Tray Tracker with clean URL support
+# This configuration enables clean URLs for the single-page application
+
 server {
     listen 80;
     server_name localhost;
+    root /usr/share/nginx/html/tray-tracker;
+    index index.html;
 
+    # Enable gzip compression
+    gzip on;
+    gzip_vary on;
+    gzip_min_length 1024;
+    gzip_proxied any;
+    gzip_comp_level 6;
+    gzip_types
+        text/plain
+        text/css
+        text/xml
+        text/javascript
+        application/javascript
+        application/xml+rss
+        application/json;
+
+    # Security headers
+    add_header X-Frame-Options "SAMEORIGIN" always;
+    add_header X-XSS-Protection "1; mode=block" always;
+    add_header X-Content-Type-Options "nosniff" always;
+    add_header Referrer-Policy "no-referrer-when-downgrade" always;
+    add_header Content-Security-Policy "default-src 'self' http: https: data: blob: 'unsafe-inline'" always;
+
+    # Handle static assets with caching
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+        expires 1y;
+        add_header Cache-Control "public, immutable";
+        try_files $uri =404;
+    }
+
+    # API proxy (if you have a backend API)
+    location /api {
+        proxy_pass http://localhost:9180;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_cache_bypass $http_upgrade;
+    }
+
+    # Main SPA routing - this is the key for clean URLs
     location / {
+        # Try to serve the requested URI
+        # If not found, serve index.html (for SPA routing)
+        try_files $uri $uri/ /index.html;
+        
+        # Add a header to indicate clean URLs are supported
+        add_header X-SPA-Routing "enabled" always;
+    }
+
+    # Error pages - don't redirect 404 to index.html as it creates loops
+    # The try_files directive already handles serving index.html for missing files
+    error_page 500 502 503 504 /50x.html;
+    location = /50x.html {
         root /usr/share/nginx/html;
-        index index.html;
-        try_files $uri $uri/ =404;
     }
 }
+
+# Optional: HTTPS configuration (uncomment if you have SSL certificates)
+# server {
+#     listen 443 ssl http2;
+#     server_name localhost;
+#     
+#     ssl_certificate /path/to/your/cert.pem;
+#     ssl_certificate_key /path/to/your/key.pem;
+#     
+#     # Include the same configuration as above
+#     root /usr/share/nginx/html/tray-tracker;
+#     index index.html;
+#     
+#     location / {
+#         try_files $uri $uri/ /index.html;
+#     }
+# }
