--- a/vercel.json
+++ b/vercel.json
@@ -3,5 +3,8 @@
   "public": true,
   "builds": [
     { "src": "**/*", "use": "@vercel/static" }
+  ],
+  "routes": [
+    { "src": "/(.*)", "dest": "/index.html" }
   ]
 }
